--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "5.0.1",
     "viem": "^2.19.4",
     "wagmi": "^2.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,4 +41,6 @@
       "last 1 safari version"
     ]
   }
+  
 }
+
