--- a/package.json
+++ b/package.json
@@ -8,18 +8,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@web3modal/wagmi": "^5.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "viem": "^2.19.4",
-    "wagmi": "^2.12.5",
-    "web-vitals": "^2.1.4",
-    "typescript": "4.9.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-   "build": "npm install --legacy-peer-deps && npm run build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
