--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "viem": "^2.19.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
