--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "game",
   "version": "0.1.0",
   "private": true,
-"dependencies": {
-  "@tanstack/react-query": "^5.51.23",
-  "@telegram-apps/sdk": "^1.1.3",
-  "@testing-library/jest-dom": "^5.17.0",
-  "@testing-library/react": "^13.4.0",
-  "@testing-library/user-event": "^13.5.0",
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-  "react-router-dom": "^6.26.0",
-  "react-scripts": "5.0.1",
-  "typescript": "^3.2.1 || ^4 || ^5",
-  "viem": "^2.19.4",
-  "web-vitals": "^2.1.4"
-},
-
+  "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
+    "@telegram-apps/sdk": "^1.1.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "react-scripts": "5.0.1",
+    "sockjs-client": "^1.6.1",
+    "typescript": "^3.2.1 || ^4 || ^5",
+    "viem": "^2.19.4",
+    "web-vitals": "^2.1.4"
+  },
   "overrides": {
     "react-scripts": {
       "typescript": "^5.5.4"
