--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=wss://6b0b-5-223-43-39.ngrok-free.app/ws
+REACT_APP_BACKEND_URL=wss://cc7d703c66f562688d4a3f842682970b.serveo.net/ws
