--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=wss://7fc53cca35dea31b0738b609e3682366.serveo.net/ws
+REACT_APP_BACKEND_URL=https://e8cc-5-223-43-39.ngrok-free.app
